# exam-basics

./: .gitignore  README.rst  pyproject.toml  requirements.txt
docs/: conf.py  index.txt
src/exam/: brick_wall.py  dataset.py  example.py  helpers.py  primes.py
tests/: brick_wall_test.py  conftest.py  dataset_test.py  example_test.py  primes_test.py
tests/fixtures/: filter_1.csv
