[tool.poetry]
name = "exam-basics"
version = "0.1.0"
description = "Exam challenge for the first block of the cirriculum"
authors = ["Serhii Horodilov <sgorodil@gmail.com>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/edu-python-course/exam-basics"
keywords = ["python", "training", "basics"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
packages = [
    { include = "exam", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.2.1"
pylint = "^2.15.10"
pytest-dependency = "^0.5.1"

[tool.poetry.dev-dependencies]
Sphinx = "^6.1.3"

[tool.pytest.ini_options]
addopts = "--verbose"
testpaths = ["tests"]

[tool.pylint."MASTER"]
fail-under = 8
ignore = ["tests"]
persistent = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
